objects/Authorization__c.object
<CustomObject>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Attachments__c</fullName>
        <formula>IF(Opportunity__r.RecordTypeId = '0120Y000000W0CY',IF(OR(Opportunity__r.Vehicle_Brand__r.Id = '0010Y00000VAjnp',Opportunity__r.Vehicle_Brand__r.Id = '0010Y000011NIts'),2,1),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Record_Type_Id__c</fullName>
        <formula>IF( RecordTypeId = '0120Y000000WZGN', '0121r000000d5DA', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Zeit bis Follow-up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Vollmacht_ID__c</fullName>
        <label>Old Vollmacht ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vollmachten</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Authorization_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VollMachtImpID__c</fullName>
        <externalId>true</externalId>
        <label>VollMachtImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Object for storing the customers written authorization.</description>
    <label>Vollmacht</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vollmachten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Dieselskandal</fullName>
        <active>true</active>
        <label>Dieselskandal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finanzierung</fullName>
        <active>true</active>
        <label>Finanzierung</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lebensversicherung</fullName>
        <active>true</active>
        <label>Lebensversicherung</label>
    </recordTypes>
</CustomObject>